fix: align fileinput label

--- a/source/sass/component/_fileinput.scss
+++ b/source/sass/component/_fileinput.scss
@@ -6,7 +6,6 @@
         vertical-align: middle;
         text-decoration: none;
         cursor: pointer;
-        line-height: 1;
         font-weight: 500;
         background-color: $color-primary;
         color: $color-white;
